--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "p-limit": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
