--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,5 @@ pids
 *.pid.lock
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
-# report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-firebase-service-account.json
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
