--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^11.0.11",
+    "@nestjs/platform-socket.io": "^11.0.13",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.0.11",
+    "@nestjs/websockets": "^11.0.13",
     "amqplib": "^0.10.5",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
@@ -50,6 +50,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sha1": "^1.1.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   },
